[gd_scene load_steps=2 format=3 uid="uid://ceds2v20cxgkk"]

[ext_resource type="Script" uid="uid://bp07kd7sikg4c" path="res://day_selector.gd" id="1_enoav"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_enoav")

[node name="InputText" type="TextEdit" parent="."]
offset_left = 84.0
offset_top = 89.0
offset_right = 512.0
offset_bottom = 317.0
text = "190: 10 19
3267: 81 40 27
83: 17 5
156: 15 6
7290: 6 8 6 15
161011: 16 10 13
192: 17 8 14
21037: 9 7 18 13
292: 11 6 16 20
"
placeholder_text = "got a problem?"

[node name="DaySelector" type="OptionButton" parent="."]
offset_left = 84.0
offset_top = 22.0
offset_right = 392.0
offset_bottom = 67.0
selected = 6
item_count = 7
popup/item_0/text = "day 01"
popup/item_0/id = 0
popup/item_1/text = "day 02"
popup/item_1/id = 1
popup/item_2/text = "day 03"
popup/item_2/id = 2
popup/item_3/text = "day 04"
popup/item_3/id = 3
popup/item_4/text = "day 05"
popup/item_4/id = 4
popup/item_5/text = "day 06"
popup/item_5/id = 5
popup/item_6/text = "day 07"
popup/item_6/id = 6

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 423.0
offset_top = 19.0
offset_right = 510.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
text = "RUN"

[node name="ResultText" type="TextEdit" parent="."]
offset_left = 85.0
offset_top = 320.0
offset_right = 515.0
offset_bottom = 356.0
text = "Pick a day and copy the input to get a result"
editable = false

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
